dev/portfolio/templates/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: go-portfolio
  labels:
    app: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
        - name: portfolio
          image: alnav3/portfolio:3
          imagePullPolicy: Always
          command: ["/bin/server"]
          ports:
            - containerPort: 8080
